# rough_surface_to_stl

./: .gitignore  README.md  pyproject.toml
examples/: example.py
roughsurf2stl/: export_stl.py  rough_surface.py  trianglulate_surface.py
roughsurf2stl/plotting/: plot_rough_surface.py
