[build-system]
requires = ["setuptools"]

[project]
name = "roughsurf2stl"
version = "1.0.0"
description = "Generate STL files of Gaussian rough surfaces for importing into 3D CAD software"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Wyatt Gronnemose" }]
dependencies = ["scipy", "matplotlib", "numpy", "tqdm"]
